--- a/LVDM/index.html
+++ b/LVDM/index.html
@@ -10109,9 +10109,9 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
         <div class="column is-four-fifths">
           <h2 class="title is-3 "> Results </h2>
           <p>We provide videos with 1000 frames and spatial resolution of 256 × 256 sampled by our approach:</p>
-          <video style="width: 100%; height: auto;" autoplay="autoplay" id="replay-video" preload="auto" src="videos/long-videos-sky.mp4" type="video/mp4" controls="" loop="">
+          <video style="width: 100%; height: auto;" autoplay="autoplay" id="replay-video" preload="auto" src="./videos/long-videos-sky.mp4" type="video/mp4" controls="" loop="">
           </video>
-          <video style="width: 100%; height: auto;" autoplay="autoplay" id="replay-video" preload="auto" src="videos/long-videos-ucf.mp4" type="video/mp4" controls="" loop="">
+          <video style="width: 100%; height: auto;" autoplay="autoplay" id="replay-video" preload="auto" src="./videos/long-videos-ucf.mp4" type="video/mp4" controls="" loop="">
           </video>
         </div>
       </div>
