--- a/LVDM/index.html
+++ b/LVDM/index.html
@@ -10183,7 +10183,8 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
     <div class="columns is-centered">
         <div class="column">
             <div class="content">
-                <video id="FaceForensics-32" autoplay="" controls="" muted="" loop="" height="100%">
+              <h2 class="title is-5">DIGAN (128 × 128 × 16 frames)</h2>
+              <video id="FaceForensics-32" autoplay="" controls="" muted="" loop="" height="100%">
                     <source src="videos/compare-short-2/ucf-digan-40videos.mp4" type="video/mp4">
                 </video>
             </div>
@@ -10191,6 +10192,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 
         <div class="column">
             <div class="content">
+              <h2 class="title is-5">TATS (128 × 128 × 16 frames)</h2>
                 <video id="FaceForensics-64" autoplay="" controls="" muted="" loop="" height="100%">
                     <source src="videos/compare-short-2/ucf-tats-40videos.mp4" type="video/mp4">
                 </video>
@@ -10199,6 +10201,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 
         <div class="column">
             <div class="content">
+              <h2 class="title is-5">LVDM(Ours) (256 × 256 × 16 frames)</h2>
                 <video id="AFHQ-DOG-Interpolate_32" autoplay="" controls="" muted="" loop="" height="100%">
                     <source src="videos/compare-short-2/ucf-our-40videos.mp4" type="video/mp4">
                 </video>
@@ -10214,6 +10217,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
   <div class="columns is-centered">
       <div class="column">
           <div class="content">
+              <h2 class="title is-5">DIGAN (128 × 128 × 16 frames)</h2>
               <video id="FaceForensics-32" autoplay="" controls="" muted="" loop="" height="100%">
                   <source src="videos/compare-short-2/taichi-digan-40videos.mp4" type="video/mp4">
               </video>
@@ -10222,6 +10226,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 
       <div class="column">
           <div class="content">
+              <h2 class="title is-5">TATS (128 × 128 × 16 frames)</h2>
               <video id="FaceForensics-64" autoplay="" controls="" muted="" loop="" height="100%">
                   <source src="videos/compare-short-2/taichi-tats-40videos.mp4" type="video/mp4">
               </video>
@@ -10230,6 +10235,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
 
       <div class="column">
           <div class="content">
+              <h2 class="title is-5">LVDM(Ours) (256 × 256 × 16 frames)</h2>
               <video id="AFHQ-DOG-Interpolate_32" autoplay="" controls="" muted="" loop="" height="100%">
                   <source src="videos/compare-short-2/taichi-ours-40videos.mp4" type="video/mp4">
               </video>
