--- a/LVDM/index.html
+++ b/LVDM/index.html
@@ -10272,7 +10272,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
   <h2 class="title is-3 "> Demo </h2>
   </div>
   <br> -->
-  <section class="gray-background ">
+  <section class="section ">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           <h2 class="title is-3 "> Comparisons on Long Video Generation </h2>
