--- a/LVDM/index.html
+++ b/LVDM/index.html
@@ -9963,7 +9963,7 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
             <h1 class="title is-1 publication-title">Latent Video Diffusion Models for High-Fidelity Video Generation with Arbitrary Lengths</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <h3 style="color:#5a6268;">Technical Report</h3><br>
+                <!-- <h3 style="color:#5a6268;">Technical Report</h3><br> -->
                 <!-- <h3 >Yingqing He<sup>1</sup>, Tianyu Yang<sup>2</sup>, Yong Zhang<sup>2</sup>, Ying Shan<sup>2</sup>, Qifeng Chen<sup>1</sup></h3><br> -->
                 <span class="author-block">
                   <a href="https://github.com/YingqingHe">Yingqing He</a><sup>1</sup>, </span>
