--- a/LVDM/index.html
+++ b/LVDM/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0029)http://artemsheludko.com/bef/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
-	<title>Bef - Enjoy Freedom</title>
+	<title>LVDM for video generation</title>
 	<meta name="description" content="">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
