change video duration and a minor fix

--- a/LVDM/index.html
+++ b/LVDM/index.html
@@ -894,16 +894,16 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
           <!-- <h3 style="color:#5a6268;">Technical Report</h3><br> -->
           <!-- <h3 >Yingqing He<sup>1</sup>, Tianyu Yang<sup>2</sup>, Yong Zhang<sup>2</sup>, Ying Shan<sup>2</sup>, Qifeng Chen<sup>1</sup></h3><br> -->
           <span class="author-block">
-            <a href="https://github.com/YingqingHe" style="color:#37E3F5;">Yingqing He,</a><sup>1</sup></span>
+            <a href="https://github.com/YingqingHe" style="color:#37E3F5;">Yingqing He<sup>1</sup></a></span>
           <span class="author-block">
-            <a href="https://tianyu-yang.com/" style="color:#37E3F5;">Tianyu Yang,</a><sup>2</sup></span>
+            <a href="https://tianyu-yang.com/" style="color:#37E3F5;">Tianyu Yang<sup>2</sup></a></span>
           <span class="author-block">
-            <a href="https://yzhang2016.github.io/yongnorriszhang.github.io/" style="color:#37E3F5;">Yong Zhang,</a><sup>2</sup></span>
+            <a href="https://yzhang2016.github.io/" style="color:#37E3F5;">Yong Zhang<sup>2</sup></a></span>
           <span class="author-block">
-            <a href="https://scholar.google.com/citations?hl=en&user=4oXBp9UAAAAJ&view_op=list_works&sortby=pubdate" style="color:#37E3F5;">Ying Shan,</a><sup>2</sup></span>
+            <a href="https://scholar.google.com/citations?hl=en&user=4oXBp9UAAAAJ&view_op=list_works&sortby=pubdate" style="color:#37E3F5;">Ying Shan<sup>2</sup></a></span>
           <span class="author-block">
-            <a href="https://cqf.io/" style="color:#37E3F5;">Qifeng Chen</a><sup>1</sup></span>
-          <h3 ><sup>1</sup>The Hong Kong University of Science and Technology,   <sup>2</sup>Tencent AI Lab</h3><br>
+            <a href="https://cqf.io/" style="color:#37E3F5;">Qifeng Chen<sup>1</sup></a></span>
+          <h3 ><sup>1</sup>The Hong Kong University of Science and Technology   <sup>2</sup>Tencent AI Lab</h3><br>
           <br>
         </span>
         </div>
