minor fix format

--- a/LVDM/index.html
+++ b/LVDM/index.html
@@ -903,7 +903,8 @@ body#dummybodyid .diigolet .cItem span.keywordStrong{float:none;font-weight:bold
             <a href="https://scholar.google.com/citations?hl=en&user=4oXBp9UAAAAJ&view_op=list_works&sortby=pubdate" style="color:#37E3F5;">Ying Shan<sup>2</sup></a></span>
           <span class="author-block">
             <a href="https://cqf.io/" style="color:#37E3F5;">Qifeng Chen<sup>1</sup></a></span>
-          <h3 ><sup>1</sup>The Hong Kong University of Science and Technology   <sup>2</sup>Tencent AI Lab</h3><br>
+          <h3 ><sup>1</sup>The Hong Kong University of Science and Technology&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>2</sup>Tencent AI Lab</h3>
+          <br>
           <br>
         </span>
         </div>
