--- a/scalecrafter/index.html
+++ b/scalecrafter/index.html
@@ -62,7 +62,7 @@
         <a href="https://github.com/YingqingHe" target="_blank">Yingqing He</a><sup>* 1</sup>
       </span>
       <span class="author-block">
-        <a href="https://menghanxia.github.io/" target="_blank">Shaoshu Yang</a><sup>* 2</sup>
+        <a href="" target="_blank">Shaoshu Yang</a><sup>* 2</sup>
       </span>
       <span class="author-block">
         <a href="#" target="_blank">Haoxin Chen</a><sup>3</sup>
@@ -71,7 +71,7 @@
         <a href="http://vinthony.github.io/" target="_blank">Xiaodong Cun</a><sup>3</sup>
       </span>
       <span class="author-block">
-        <a href="" target="_blank">Menghan Xia</a><sup>3</sup>
+        <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a><sup>3</sup>
       </span>
       <span class="author-block">
         <a href="https://yzhang2016.github.io" target="_blank">Yong Zhang</a><sup># 3</sup>
@@ -83,7 +83,7 @@
         <a href="#" target="_blank">Ran He</a><sup>2</sup>
       </span>
       <span class="author-block">
-        <a href="https://doubiiu.github.io/" target="_blank">Qifeng Chen</a><sup># 1</sup>
+        <a href="https://cqf.io/" target="_blank">Qifeng Chen</a><sup># 1</sup>
       </span>
       <span class="author-block">
         <a href="https://scholar.google.com/citations?hl=zh-CN&user=4oXBp9UAAAAJ" target="_blank">Ying Shan</a><sup>3</sup>
