--- a/scalecrafter/index.html
+++ b/scalecrafter/index.html
@@ -97,8 +97,30 @@
         <br>
         (<sup>*</sup> Equal Contribution &nbsp;&nbsp; <sup>#</sup> Corresponding Author)
     </div>
+    <div class="column has-text-centered" style="margin: 0 0;">
+      <div class="publication-links" style="margin: 0 0;">
+        <span class="link-block">
+          <a href="https://arxiv.org/abs/2310.07702" target="_blank" class="external-link is-normal is-rounded is-dark">
+            <span class="icon">
+              <i class="fas fa-file-pdf"></i>
+            </span>
+            <span>Paper</span>
+          </a>
+        </span>
+        <!-- Github link -->
+        <span class="link-block" style="margin: 0 0;">
+          <a href="https://github.com/YingqingHe/ScaleCrafter" target="_blank" class="external-link is-normal is-rounded is-dark">
+            <span class="icon">
+              <i class="fab fa-github"></i>
+            </span>
+            <span>Code</span>
+          </a>
+        </span>
+      </div>
+    </div>
+
     <!-- <video autoplay muted controls="" loop="" style="height: 75vh; margin: auto; text-align: center;  margin-left: 50px; margin-right: 50px;"> <source src="videos-2k/0189_randk2-seed135.mp4" type="video/mp4"></video> -->
-    <div id="carousel" class="carousel carousel-vid" style="overflow: hidden; height:100vh">
+    <div id="carousel" class="carousel carousel-vid" style="overflow: hidden; height:100vh; margin-top: -70px;">
       <!-- <div class="img-txt" style="height:75vh">
         <img src="images/sdxl/4096x4096/000.png" alt="图片" style="height:75vh">
         <p>Generated image with resolution of <span style="color:#974EC3">4096 x 4096</span>. 
