--- a/scalecrafter/index.html
+++ b/scalecrafter/index.html
@@ -147,7 +147,34 @@
         <p>Generated video with resolution of <span style="color:#974EC3">2048 x 1152</span>. 
           <br><span style="font-size: small;">Input: “A beautiful girl on a boat”</span></p>
       </div>
-      
+      <div class="vid-txt">
+        <video autoplay muted controls="" loop="" dth="1000px">
+          <source src="videos-2k/0029_randk0-seed131.mp4" type="video/mp4">
+        </video>
+        <p>Generated video with resolution of <span style="color:#974EC3">2048 x 1152</span>. 
+          <br><span style="font-size: small;">Input: “A majestic eagle soars high above the treetops, surveying its territory.”</span></p>
+      </div>
+      <div class="vid-txt">
+        <video autoplay muted controls="" loop="" dth="1000px">
+          <source src="videos-2k/46d3d24f02bd3e974200cee0faf05ef1.mov" type="video/mp4">
+        </video>
+        <p>Generated video with resolution of <span style="color:#974EC3">2048 x 1152</span>. 
+          <br><span style="font-size: small;">Input: “an iron man walking on the new york times square, cinematic”</span></p>
+      </div>
+      <div class="vid-txt">
+        <video autoplay muted controls="" loop="" dth="1000px">
+          <source src="videos-2k/77be262cd3ae5a58b030cc272a385043.mov" type="video/mp4">
+        </video>
+        <p>Generated video with resolution of <span style="color:#974EC3">2048 x 1152</span>. 
+          <br><span style="font-size: small;">Input: “a beautiful woman smiling on a bridge, facing camera, close-up shot, sunset, cinematic, super detailed face”</span></p>
+      </div>
+      <div class="vid-txt">
+        <video autoplay muted controls="" loop="" dth="1000px">
+          <source src="videos-2k/c86faa360420e78f37cd517294ef13f9.mov" type="video/mp4">
+        </video>
+        <p>Generated video with resolution of <span style="color:#974EC3">2048 x 1152</span>. 
+          <br><span style="font-size: small;">Input: “A fluffy baby sloth with an orange knitted hat”</span></p>
+      </div>
     </div>
     <!-- <p style="text-align: center; margin-bottom: 100px; "> Generated video of <i>“Aerial autumn forest with a river in the mountains"</i> of resolution <span style="color:#974EC3">2048 x 1152</span> 
     (with a latent video diffusion model trained on <span style="color:#974EC3">1024 x 576</span>). </p> -->
