--- a/scalecrafter/index.html
+++ b/scalecrafter/index.html
@@ -97,6 +97,9 @@
         <br>
         (<sup>*</sup> Equal Contribution &nbsp;&nbsp; <sup>#</sup> Corresponding Author)
     </div>
+    <h5 class="is-size-4" style="text-align: center; font-size: 35px">
+      ICLR 2024 Spotlight <br>
+    </h5>
     <div class="column has-text-centered" style="margin: 0 0;">
       <div class="publication-links" style="margin: 0 0;">
         <span class="link-block">
