--- a/scalecrafter/index.html
+++ b/scalecrafter/index.html
@@ -262,7 +262,7 @@
   <div class="hero-body">
       <div class="content has-text-justified">
         <h3 class="title is-4"><strong>Higher-Resolution Synthsized Images with SD XL</h3>
-        <p style="text-align: center"> Utilizing a pretrained model trained on resolution <span style="color: #974EC3;">1024 x 1024</span>, our method can generate images with resolution up to with <span style="color: #974EC3;">4096 x 4096</span> <i style="color:#ac354b">without training/optimization</i>. </p>
+        <p style="text-align: center"> Utilizing a pretrained model trained on a resolution of <span style="color: #974EC3;">1024 x 1024</span>, our method can generate images with a resolution of up to <span style="color: #974EC3;">4096 x 4096</span> <i style="color:#ac354b">without the need for training/optimization</i>. </p>
         <div id="carousel" class="carousel">
           <div class="img-txt">
             <img src="images/sdxl/4096x4096/000.png" alt="图片">
@@ -309,8 +309,8 @@
       <div class="hero-body">
         <br>
         <h3 class="title is-4"><strong>Higher-Resolution Synthsized Videos with Latent Video Diffusion Models</h3>
-        <p style="text-align: center"> Utilizing a pretrained model trained on resolution <span style="color: #974EC3;">512 x 320</span>, 
-          our method can generate videos of <span style="color: #974EC3;">1024 x 640</span> resolution <i style="color:#ac354b">without training/optimization</i>. </p>
+        <p style="text-align: center"> Utilizing a pretrained model trained on a resolution of <span style="color: #974EC3;">512 x 320</span>, 
+          our method can generate videos of <span style="color: #974EC3;">1024 x 640</span> resolution <i style="color:#ac354b">without the need for training/optimization</i>. </p>
           <div id="carousel" class="carousel carousel-vid">
           <div class="vid-txt">
             <video autoplay muted controls="" loop="" width="1000px" height="1000px">
@@ -382,8 +382,9 @@
     <div class="hero-body">
       <br>
       <h3 class="title is-4"><strong>Higher-Resolution Synthsized Images with SD 2.1</h3>
-      <p style="text-align: center"> Utilizing a pretrained model trained on resolution of <span style="color: #974EC3;">512 x 512</span>, 
-        whlie our method can generate images with resolution up to with <span style="color: #974EC3;">2048 x 2048</span> <i style="color:#ac354b">without training/optimization</i>. </p>
+      <p style="text-align: center"> Utilizing a pretrained model trained on a resolution of <span style="color: #974EC3;">512 x 512</span>, 
+        whlie our method can generate images with a resolution of up to <span style="color: #974EC3;">2048 x 2048</span> <i style="color:#ac354b">without 
+          the need for training/optimization</i>. </p>
       <div id="carousel" class="carousel">
         <div class="img-txt">
           <img src="images/SDv2-1/2048x2048/292-rank0-iter29-HDR-Image-of-Yosemite-Falls.jpg" alt="图片">
@@ -482,8 +483,9 @@
       <div class="hero-body">
         <div class="content has-text-justified">
           <h3 class="title is-4"><strong>Higher-Resolution Synthsized Images with SD 1.5</h3>
-          <p style="text-align: center"> Utilizing a pretrained model trained on resolution <span style="color: #974EC3;">512 x 512</span>, 
-            our method can generate images with resolution up to with <span style="color: #974EC3;">2048 x 2048</span> <i style="color:#ac354b">without training/optimization</i>. </p>
+          <p style="text-align: center"> Utilizing a pretrained model trained on a resolution of <span style="color: #974EC3;">512 x 512</span>, 
+            our method can generate images with a resolution of up to <span style="color: #974EC3;">2048 x 2048</span> <i style="color:#ac354b">
+              without the need for training/optimization</i>. </p>
           <div id="carousel" class="carousel">
             <div class="img-txt">
               <img src="images/sd1-5/2048x2048/A rustic wooden cabin nestled in a snowy forest2.jpg" alt="图片">
