--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </p>
           </td>
           <td style="padding:2.5%;width:40%;max-width:40%">
-            <a href="imgs/mypic.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="imgs/mypic.jpg" class="hoverZoomLink"></a>
+            <a href="myassets/mypic.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="myassets/mypic.jpg" class="hoverZoomLink"></a>
           </td>
         </tr>
       </tbody></table>
@@ -64,7 +64,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="imgs/mypic.jpg"><img style="width:75%;max-width:100%" alt="profile photo" src="imgs/mypic.jpg" class="hoverZoomLink"></a>
+                <a href="myassets/mypic.jpg"><img style="width:75%;max-width:100%" alt="profile photo" src="myassets/mypic.jpg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
@@ -88,7 +88,7 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='db3d_image'>
-            <img src='imgs/seeing.png' width="160">
+            <img src='myassets/seeing.png' width="160">
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
@@ -118,7 +118,7 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='db3d_image'>
-            <img src='imgs/cheap.jpg' width="160">
+            <img src='myassets/cheap.jpg' width="160">
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
@@ -155,7 +155,7 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='db3d_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="imgs/magicstick.mp4" type="video/mp4">
+            <source src="myassets/magicstick.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
           </div>
@@ -190,10 +190,10 @@
         <!-- <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one"  style="vertical-align:middle">
             <div class="two" id='rawnerf_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="imgs/scalecrafter.mp4" type="video/mp4">
+            <source src="myassets/scalecrafter.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
-            <img src='imgs/scalecrafter-1.jpg' width="160" style="justify-content: center; align-items: center;">
+            <img src='myassets/scalecrafter-1.jpg' width="160" style="justify-content: center; align-items: center;">
           </div>
           <script type="text/javascript">
             function rawnerf_start() {
@@ -209,7 +209,7 @@
           <td style="padding:20px;width:25%;vertical-align:middle">
             <div class="one"  style="vertical-align:middle">
             <div class="two" id='rawnerf_image'><video  width=100% height=100% muted autoplay loop>
-              <source src="imgs/scalecrafter.mp4" type="video/mp4">
+              <source src="myassets/scalecrafter.mp4" type="video/mp4">
               Your browser does not support the video tag.
               </video></div></div>
             </td>
@@ -252,7 +252,7 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='db3d_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="imgs/freenoise.mp4" type="video/mp4">
+            <source src="myassets/freenoise.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
           </div>
@@ -287,7 +287,7 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='db3d_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="imgs/fyp/girl_yellow.mp4" type="video/mp4">
+            <source src="myassets/fyp/girl_yellow.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
           </div>
@@ -321,10 +321,10 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='db3d_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="imgs/myv.mp4" type="video/mp4">
+            <source src="myassets/myv.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
-            <img src='imgs/myv.jpg' width="160">
+            <img src='myassets/myv.jpg' width="160">
           </div>
           <script type="text/javascript">
             function db3d_start() {
@@ -371,7 +371,7 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='db3d_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="imgs/talecrafter.mp4" type="video/mp4">
+            <source src="myassets/talecrafter.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
           </div>
@@ -409,10 +409,10 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='db3d_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="imgs/videocrafter/girl.gif" type="video/mp4">
+            <source src="myassets/videocrafter/girl.gif" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
-            <img src='imgs/videocrafter/girl.gif' width="170">
+            <img src='myassets/videocrafter/girl.gif' width="170">
           </div>
           <script type="text/javascript">
             function db3d_start() {
@@ -459,10 +459,10 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='zipnerf_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="imgs/teddybear.mp4" type="video/mp4">
+            <source src="myassets/teddybear.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
-            <img src='imgs/teddybear-1.jpg' width="160">
+            <img src='myassets/teddybear-1.jpg' width="160">
           </div>
           <script type="text/javascript">
             function zipnerf_start() {
@@ -513,7 +513,7 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='db3d_image'><video  width=100% height=100% muted autoplay loop>
-            <source src="imgs/lvdm.mp4" type="video/mp4">
+            <source src="myassets/lvdm.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video></div>
           </div>
@@ -549,7 +549,7 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='db3d_image'>
-            <img src='imgs/interclassgan.jpeg' width="160">
+            <img src='myassets/interclassgan.jpeg' width="160">
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
@@ -581,7 +581,7 @@
         <td style="padding:20px;width:25%;vertical-align:middle">
           <div class="one">
             <div class="two" id='db3d_image'>
-            <img src='imgs/shadow.jpg' width="160">
+            <img src='myassets/shadow.jpg' width="160">
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
