add: follow-your-click

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="https://doubiiu.github.io/projects/Make-Your-Video/">
-            <span class="papertitle">Seeing and Hearing: Open-domain Visual-Audio Generation with Diffusion Latent Aligners</span>
+            <span class="papertitle">Follow-Your-Click: Open-domain Regional Image Animation via Short Prompts  </span>
           </a>
           <br>
           <a href="https://mayuelala.github.io/" >Yue Ma</a><sup>*</sup>,
