--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <em>arXiv</em>, 2024
           <br>
           <a href="https://follow-your-click.github.io/">Project page</a> / 
-          <a href="https://arxiv.org/abs/2403.08268">arXiv</a>
+          <a href="https://arxiv.org/abs/2403.08268">arXiv</a> / 
           <a href="https://github.com/mayuelala/FollowYourClick">Github</a>
           <p></p>
           <p>
@@ -140,7 +140,7 @@
           <em>CVPR</em>, 2024
           <br>
           <a href="https://yzxing87.github.io/Seeing-and-Hearing/">Project page</a> / 
-          <a href="https://arxiv.org/abs/2402.17723">arXiv</a>
+          <a href="https://arxiv.org/abs/2402.17723">arXiv</a> / 
           <a href="https://github.com/yzxing87/Seeing-and-Hearing">Github</a>
           <p></p>
           <p>
@@ -177,7 +177,7 @@
           <em>arXiv</em>, 2024
           <br>
           <a href="https://guolanqing.github.io/Self-Cascade/">Project page</a> / 
-          <a href="https://arxiv.org/abs/2402.10491">arXiv</a>
+          <a href="https://arxiv.org/abs/2402.10491">arXiv</a> / 
           <a href="https://github.com/GuoLanqing/Self-Cascade/">Github</a>
           <p></p>
           <p>
@@ -212,7 +212,7 @@
           <em>arXiv</em>, 2023
           <br>
           <a href="https://magic-stick-edit.github.io/">Project page</a> / 
-          <a href="https://arxiv.org/abs/2312.03047">arXiv</a>
+          <a href="https://arxiv.org/abs/2312.03047">arXiv</a> / 
           <a href="https://github.com/mayuelala/MagicStick">Github</a>
           <p></p>
           <p>
@@ -270,10 +270,8 @@
           <br>
           <em>ICLR</em>, 2024 &nbsp <font color="red"><strong>(Spotlight)</strong></font>
           <br>
-          <a href="https://bmild.github.io/rawnerf/index.html">project page</a>
-    /
-          <a href="https://arxiv.org/abs/2310.07702">arXiv</a>
-    /
+          <a href="https://bmild.github.io/rawnerf/index.html">project page</a> / 
+          <a href="https://arxiv.org/abs/2310.07702">arXiv</a> / 
           <a href="https://github.com/YingqingHe/ScaleCrafter">code</a>
           <p></p>
           <p>
@@ -431,7 +429,7 @@
           <em>SIGGRAPH Asia</em>, 2023
           <br>
           <a href="https://ailab-cvc.github.io/TaleCrafter/">Project page</a> / 
-          <a href="https://arxiv.org/abs/2305.18247">arXiv</a>
+          <a href="https://arxiv.org/abs/2305.18247">arXiv</a> / 
           <a href="https://github.com/AILab-CVC/TaleCrafter">Github</a>
           <p></p>
           <p>
@@ -480,9 +478,9 @@
           <br>
           <em>arXiv</em>, 2023
           <br>
+          <a href="https://ailab-cvc.github.io/videocrafter/">Project page</a> /
           <a href="https://arxiv.org/abs/2310.19512">arXiv</a> /
-          <a href="https://ailab-cvc.github.io/videocrafter/">Project</a> /
-          <a href="https://github.com/AILab-CVC/VideoCrafter">Code</a> 
+          <a href="https://github.com/AILab-CVC/VideoCrafter">Github</a> 
           <p>
             An open-sourced foundational text-to-video and image-to-video diffusion model for high-quality video generation.
           </p>
@@ -530,10 +528,8 @@
           <br>
           <em>arXiv</em>, 2023 &nbsp 
           <br>
-          <a href="http://jonbarron.info/zipnerf">Project page</a>
-          /
-          <a href="https://arxiv.org/abs/2307.06940">arXiv</a>
-          /
+          <a href="http://jonbarron.info/zipnerf">Project page</a> / 
+          <a href="https://arxiv.org/abs/2307.06940">arXiv</a> / 
           <a href="https://github.com/VideoCrafter/Animate-A-Story">Github</a>
           <p></p>
           <p>
@@ -567,7 +563,7 @@
           <em>arXiv</em>, 2022
           <br>
           <a href="https://yingqinghe.github.io/LVDM/">Project page</a> / 
-          <a href="https://arxiv.org/abs/2211.13221">arXiv</a>
+          <a href="https://arxiv.org/abs/2211.13221">arXiv</a> / 
           <a href="https://github.com/YingqingHe/LVDM">Github</a>
           <p></p>
           <p>
@@ -632,7 +628,7 @@
           <!-- <em>arXiv</em>, 2023 -->
           <em>ACM MM</em>, 2021 &nbsp <font color="red"><strong>(Oral)</strong></font>
           <br>
-          <a href="https://arxiv.org/abs/2108.03466">arXiv</a>
+          <a href="https://arxiv.org/abs/2108.03466">arXiv</a> / 
           <a href="https://github.com/YingqingHe/Shadow-Removal-via-Generative-Priors">code</a>
           <p></p>
           <p>we propose an unsupervised method for portrait shadow removal, leveraging the facial priors from <em>StyleGAN2</em>.
